--- a/app/templates/ booking_confirmation.html
+++ b/app/templates/ booking_confirmation.html
@@ -11,7 +11,7 @@
       <li><strong>Class:</strong> {{ class_name }}</li>
       <li><strong>Date:</strong> {{ date }}</li>
       <li><strong>Time:</strong> {{ time }}</li>
-      <li><strong>Center:</strong> {{ center }}</li>
+      <li><strong>Center:</strong> {{ center_name }}</li>
     </ul>
 
     <p>We’re looking forward to seeing you!</p>
